<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="6dp"
    android:layout_marginLeft="4dp"
    android:layout_marginRight="4dp"
    android:layout_marginTop="6dp"
    android:clickable="true"
    android:foreground="?android:attr/selectableItemBackground"
    card_view:cardCornerRadius="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/daily_pic_iv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="centerCrop"
            android:src="@drawable/default_image"/>

        <TextView
            android:id="@+id/daily_desc_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text=""
            android:textColor="@color/btn_default_shadow"
            android:textSize="@dimen/text_size_16"
            android:visibility="gone"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="#80eeeeee"
            android:padding="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerVertical="true"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/daily_tag_android_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="3dp"
                    android:text="@string/String_android"
                    android:textColor="@color/google_dark_blue"
                    android:textSize="@dimen/text_size_13"/>

                <TextView
                    android:id="@+id/daily_ios_android_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:padding="3dp"
                    android:text="@string/String_ios"
                    android:textColor="@color/style_color_primary"
                    android:textSize="@dimen/text_size_13"/>

                <TextView
                    android:id="@+id/daily_js_android_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="3dp"
                    android:text="@string/String_js"
                    android:textColor="@color/btn_send_pressed"
                    android:textSize="@dimen/text_size_13"/>
            </LinearLayout>

            <TextView
                android:id="@+id/daily_date_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:text=""
                android:textColor="@color/gray"
                android:textSize="@dimen/text_size_14"/>
        </RelativeLayout>
    </LinearLayout>
</android.support.v7.widget.CardView>
